# wmcv-obj

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: gtest.cmake
include/: CMakeLists.txt
include/wmcv_obj/: wmcv_obj.h
src/: CMakeLists.txt  main.cpp  pch.h  wmcv_obj.cpp
test/: CMakeLists.txt  test_main.cpp
